[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://gui/main_menu/title.png" type="Texture" id=2]
[ext_resource path="res://music/11 No Tomorrow.ogg" type="AudioStream" id=3]
[ext_resource path="res://gui/main_menu/Menu__008.ogg" type="AudioStream" id=4]
[ext_resource path="res://gui/main_menu/Menu__009.ogg" type="AudioStream" id=5]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1090.0
margin_bottom = 717.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1090.0
margin_bottom = 717.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1090.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )

[node name="NewGame" type="Label" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 1090.0
margin_bottom = 618.0
text = "New Game"
align = 1
valign = 1

[node name="Quit" type="Label" parent="VBoxContainer"]
margin_top = 622.0
margin_right = 1090.0
margin_bottom = 636.0
text = "Quit"
align = 1
valign = 1

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MenuSelectBlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MenuBlockSoundTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
